--- a/style.scss
+++ b/style.scss
@@ -7,11 +7,14 @@
 @import "./src/sass/components/nav";
 @import "./src/sass/components/welcome";
 @import "./src/sass/components/filters";
+@import "./src/sass/components/modal-link";
+@import "./src/sass/components/modal-wrapper";
 @import "./src/sass/components/gallery";
 
 
 @import "./src/sass/layout/header";
 @import "./src/sass/layout/hero";
 @import "./src/sass/layout/apropos";
+@import "./src/sass/layout/modal";
 @import "./src/sass/layout/gallery-layout";
 @import "./src/sass/layout/footer";
