--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -80,6 +80,72 @@ a, li, button {
   color: white;
 }
 
+.modal-link {
+  display: block;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+.modal-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: normal;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  gap: 2rem;
+}
+.modal-wrapper__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  width: 100%;
+}
+.modal-wrapper__header__img {
+  height: 15px;
+  width: 15px;
+}
+.modal-wrapper__header__img:hover {
+  cursor: pointer;
+}
+.modal-wrapper__layout {
+  display: flex;
+  flex-direction: row;
+  justify-content: normal;
+  align-items: center;
+  width: 100%;
+  max-height: 700px;
+  gap: 12%;
+}
+.modal-wrapper__fig {
+  height: 100%;
+  width: 50%;
+}
+.modal-wrapper__fig__img {
+  height: 100%;
+  width: 100%;
+}
+.modal-wrapper__fig__caption {
+  opacity: 0;
+}
+.modal-wrapper__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: normal;
+  align-items: normal;
+  height: 700px;
+  width: 30%;
+  padding-top: 2rem;
+  gap: 1.5rem;
+}
+.modal-wrapper__info__h {
+  font-size: 1.5rem;
+}
+.modal-wrapper__info__p {
+  font-size: 1rem;
+}
+
 .gallery {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -90,7 +156,7 @@ a, li, button {
   height: 500px;
 }
 .gallery img {
-  height: 100%;
+  height: 500px;
   width: 100%;
 }
 
@@ -101,8 +167,13 @@ a, li, button {
   justify-content: space-between;
   align-items: center;
 }
-.header__logo {
+.header__logo-link {
+  display: block;
+  height: 100%;
   width: 35%;
+}
+.header__logo {
+  width: 100%;
 }
 
 .hero {
@@ -140,6 +211,24 @@ a, li, button {
   align-items: center;
   gap: 5rem;
   width: 30%;
+}
+
+.modal {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  margin-top: 1.5rem;
+  margin-left: 1.5rem;
+  border: none;
+  border-radius: 1rem;
+  padding: 2.5rem;
+}
+.modal::backdrop {
+  background: rgba(0, 0, 0, 0.6);
+  pointer-events: none;
 }
 
 .gallery-layout {
