--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,8 @@
 @import "./src/sass/components/modal-link";
 @import "./src/sass/components/modal-wrapper";
 @import "./src/sass/components/gallery";
+@import "./src/sass/components/info-contact";
+@import "./src/sass/components/form-contact";
 
 
 @import "./src/sass/layout/header";
@@ -17,4 +19,5 @@
 @import "./src/sass/layout/apropos";
 @import "./src/sass/layout/modal";
 @import "./src/sass/layout/gallery-layout";
+@import "./src/sass/layout/contact-layout";
 @import "./src/sass/layout/footer";
