--- a/src/sass/components/_modal-wrapper.scss
+++ b/src/sass/components/_modal-wrapper.scss
@@ -38,10 +38,29 @@
         padding-top: 2rem;
         gap: 1.5rem;
         &__h {
-            font-size: 1.5rem;
+            font-size: 2rem;
+            margin-bottom: 1.4rem;
+            align-self: center;
         }
-        &__p {
-            font-size: 1rem;
+        &__div-price {
+            @include flex(row, space-between, center);
+            &__title {
+                font-size: 1.5rem
+            }
+            &__price {
+                font-size : 1.5rem;
+                padding-top: 0.2rem;
+            }
+        }
+        &__details {
+            @include flex(column, center, normal);
+            gap: 1rem;
+            &__title {
+                font-size: 1.5rem;
+            }
+            &__p {
+                font-size: 1rem;
+            }
         }
     }
 }
