--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,14 +1,20 @@
 .gallery {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 30px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 1.5rem;
     grid-row-gap: 70px;
-    & figure {
-        height: 500px;
+    & a {
+        @include flex(column, normal, normal);
+        border-radius: 1rem;
+        background-color: #FAFAFA;
     }
     & img {
-        height: 500px;
+        height: 380px;
         width: 100%;
+        border-radius: 1rem 1rem 0 0;
+    }
+    & figcaption {
+        padding: 0.5rem;
+        align-self: center;
     }
 }
-
