--- a/src/sass/components/_liens-contact.scss
+++ b/src/sass/components/_liens-contact.scss
@@ -2,14 +2,14 @@
     @include flex(column, center, normal);
     width: 50%;
     margin: 2rem;
-    padding: 2rem;
-    padding-bottom: 4rem;
+    padding: 2rem 2rem 1rem 2rem;
     background-color: #EED6C4;
     border-radius: 2rem;
     &__ul {
         @include flex(column, normal, normal);
-        margin-top: 3rem;
-        gap: 2rem;
+        margin-top: 2.5rem;
+        margin-bottom: 3rem;
+        gap: 1.5rem;
         padding: 0;
         &__li a {
             @include flex(row, normal, center);
