--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,9 @@
 @import "./src/sass/components/gallery";
 @import "./src/sass/components/info-contact";
 @import "./src/sass/components/liens-contact";
+@import "./src/sass/components/social-networks-links";
+@import "./src/sass/components/creations-links";
+@import "./src/sass/components/merch-links";
 
 
 @import "./src/sass/layout/header";
