--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -251,6 +251,39 @@ a, li, button {
   align-self: center;
 }
 
+.social-networks-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: normal;
+  align-items: normal;
+  gap: 0.4rem;
+}
+.social-networks-links a {
+  font-size: 0.8rem;
+}
+
+.creations-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: normal;
+  align-items: normal;
+  gap: 0.4rem;
+}
+.creations-links a {
+  font-size: 0.8rem;
+}
+
+.merch-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: normal;
+  align-items: normal;
+  gap: 0.4rem;
+}
+.merch-links a {
+  font-size: 0.8rem;
+}
+
 .header {
   margin: 2rem;
   display: flex;
@@ -359,19 +392,23 @@ a, li, button {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: normal;
   height: 100%;
   width: 100%;
+  gap: 10%;
   margin-top: 3rem;
-  padding: 2rem;
+  padding: 3rem;
   background-color: black;
 }
 .footer__content {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  align-items: normal;
   width: 90%;
+}
+.footer__content a, .footer__content p {
+  color: white;
 }
 .footer__link-icon-up {
   display: flex;
