--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -171,6 +171,13 @@ a, li, button {
 .modal-wrapper__info__details__p {
   font-size: 1rem;
 }
+.modal-wrapper__info__btn-buy {
+  display: block;
+  padding: 0.5rem 1.5rem;
+  border: 1px solid black;
+  text-align: center;
+  border-radius: 1rem;
+}
 
 .gallery {
   display: grid;
