--- a/src/sass/components/_modal-wrapper.scss
+++ b/src/sass/components/_modal-wrapper.scss
@@ -62,5 +62,12 @@
                 font-size: 1rem;
             }
         }
+        &__btn-buy {
+            display: block;
+            padding: 0.5rem 1.5rem;
+            border: 1px solid black;
+            text-align: center;
+            border-radius: 1rem;
+        }
     }
 }
