--- a/src/sass/components/_info-contact.scss
+++ b/src/sass/components/_info-contact.scss
@@ -5,11 +5,24 @@
     padding: 2rem;
     background-color: #F8ECE2;
     border-radius: 2rem;
+    @include shadow-light;
+    @include tablet {
+        width: 80%;
+        align-items: center;
+    }
     &__title {
         margin-bottom: 2.5rem;
+        @include mobile {
+            font-size: 1.2rem
+        }
     }
     &__text {
         @include flex(column, normal, normal);
         gap: 1rem;
+        & p {
+            @include mobile {
+                font-size: 1rem;
+            }
+        }
     }
 }
