--- a/src/sass/components/_liens-contact.scss
+++ b/src/sass/components/_liens-contact.scss
@@ -5,19 +5,35 @@
     padding: 2rem 2rem 1rem 2rem;
     background-color: #EED6C4;
     border-radius: 2rem;
+    @include shadow-light;
+    @include tablet {
+        width: 80%;
+        align-items: center;
+    }
     &__ul {
         @include flex(column, normal, normal);
         margin-top: 2.5rem;
         margin-bottom: 3rem;
         gap: 1.5rem;
         padding: 0;
+        &__li {
+            @include mobile {
+                font-size: 1rem
+            }
+        }
         &__li a {
             @include flex(row, normal, center);
             gap: 0.5rem;
             margin-left: -0.5rem;
+            @include mobile {
+                font-size: 1rem;
+            }
         }
     }
     & h3 {
         align-self: center;
+        @include mobile {
+            font-size: 1.2rem
+        }
     }
 }
