--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -1,13 +1,30 @@
 .nav {
     @include flex(row);
+    margin-right: 1.5rem;
+    @include tablet {
+        margin: 0;
+    }
     &__ul {
         @include flex(row);
-        gap: 2rem;
-        &__li {
-            font-size: 1.5rem;
+        gap: 1.5rem;
+        @include tablet {
+            gap: 1.3rem;
+            padding: 0;
+            @include mobile {
+                gap: 1rem;
+            }
         }
         &__li:hover {
             cursor: pointer;
+        }
+        & a {
+            font-size: 1.3rem;
+            @include tablet {
+                font-size: 1.2rem;
+                @include mobile {
+                    font-size: 0.9rem;
+                }
+            }
         }
     }
 }
