--- a/src/sass/layout/_apropos.scss
+++ b/src/sass/layout/_apropos.scss
@@ -1,10 +1,21 @@
 .apropos {
     @include flex(row);
-    gap: 20%;
+    gap: 15%;
     margin: 2rem;
+    @include tablet {
+        flex-direction: column;
+    }
     &__figure {
         height: 30rem;
         width: 25rem;
+        @include tablet {
+            height: 20rem;
+            width: 16rem;
+            @include mobile {
+                height: 10rem;
+                width: 8.5rem;
+            }
+        }
         & img {
             height: 100%;
             width: 100%;
@@ -14,5 +25,20 @@
         @include flex(column);
         gap: 5rem;
         width: 30%;
+        @include tablet {
+            margin-top: 2rem;
+            gap: 1rem;
+            width: 90%;
+        & h2 {
+            font-size: 1.2rem;
+        }
+        & p {
+            font-size: 1rem;
+        }
+            @include mobile {
+                width: 100%;
+            }
+        }
+        
     }
 }
