--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: auto;
     width: 100%;
     margin-top: 1.5rem;
     margin-left: 1.5rem;
@@ -13,5 +13,8 @@
     &::backdrop {
         background: rgba(0, 0, 0, 0.6);
         pointer-events: none;
+    }
+    @include tablet {
+        padding: 1.5rem;
     }
 }
