--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -6,9 +6,53 @@
 }
 
 @mixin layout-footer-component {
-    @include flex(column, normal, normal);
+    @include flex(column, normal, center);
     gap: 0.4rem;
+    &__title {
+        margin-bottom: 1rem;
+        @include tablet {
+            margin-bottom: 0.5rem;
+            @include mobile {
+                font-size: 1.2rem;
+            }
+        }
+    }
     & a {
         font-size: 0.8rem;
+    }
+}
+
+@mixin shadow-light {
+    box-shadow: rgba(0, 0, 0, 0.15) 0rem 0.2rem 0.4rem 0.1rem;
+}
+
+@mixin shadow-medium {
+    box-shadow: rgba(0, 0, 0, 0.25) 0rem 0.2rem 0.5rem 0.15rem;
+}
+
+
+/******** Media Querries *******/
+
+@mixin mobile {
+    @media screen and (max-width: map-get($breakpoints, mobile)){
+        @content;
+    }
+}
+
+@mixin tablet {
+    @media screen and (max-width: map-get($breakpoints, tablet)){
+        @content;    
+    }
+}
+
+@mixin desktop {
+    @media screen and (max-width: map-get($breakpoints, desktop)) {
+        @content;
+    }
+}
+
+@mixin desktop-xl-min {
+    @media screen and (min-width: map-get($breakpoints, desktop-xl)) {
+        @content;    
     }
 }
